--- a/new_analysis.ipynb
+++ b/new_analysis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "4  2022-09-29  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -201,23 +201,23 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 340247 entries, 0 to 340246\n",
+      "RangeIndex: 359531 entries, 0 to 359530\n",
       "Data columns (total 11 columns):\n",
       " #   Column                      Non-Null Count   Dtype              \n",
       "---  ------                      --------------   -----              \n",
-      " 0   ds_marca                    340247 non-null  object             \n",
-      " 1   ds_nome_produto             340247 non-null  object             \n",
-      " 2   vl_preco_atual              340247 non-null  float64            \n",
-      " 3   vl_preco_com_desconto       340247 non-null  float64            \n",
-      " 4   vl_porcentagem_do_desconto  340247 non-null  float64            \n",
-      " 5   qt_quantidade_estoque       126440 non-null  Int64              \n",
-      " 6   oferta                      340247 non-null  object             \n",
-      " 7   ds_disponibilidade          340247 non-null  object             \n",
-      " 8   loja                        340247 non-null  object             \n",
-      " 9   dt_carga                    340247 non-null  datetime64[ns, UTC]\n",
-      " 10  data                        340247 non-null  object             \n",
+      " 0   ds_marca                    359531 non-null  object             \n",
+      " 1   ds_nome_produto             359531 non-null  object             \n",
+      " 2   vl_preco_atual              359531 non-null  float64            \n",
+      " 3   vl_preco_com_desconto       359531 non-null  float64            \n",
+      " 4   vl_porcentagem_do_desconto  359531 non-null  float64            \n",
+      " 5   qt_quantidade_estoque       133662 non-null  Int64              \n",
+      " 6   oferta                      359531 non-null  object             \n",
+      " 7   ds_disponibilidade          359531 non-null  object             \n",
+      " 8   loja                        359531 non-null  object             \n",
+      " 9   dt_carga                    359531 non-null  datetime64[ns, UTC]\n",
+      " 10  data                        359531 non-null  object             \n",
       "dtypes: Int64(1), datetime64[ns, UTC](1), float64(3), object(6)\n",
-      "memory usage: 28.9+ MB\n"
+      "memory usage: 30.5+ MB\n"
      ]
     }
    ],
@@ -227,42 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dt_carga\n",
-       "2022-09-29 12:26:15.112196+00:00    2663\n",
-       "2022-09-29 22:01:30.406181+00:00    2663\n",
-       "2022-09-30 10:01:23.630323+00:00    2663\n",
-       "2022-09-30 22:01:22.660381+00:00    2661\n",
-       "2022-10-01 10:02:27.606722+00:00    2662\n",
-       "                                    ... \n",
-       "2022-11-26 10:01:22.800606+00:00    2777\n",
-       "2022-11-26 22:01:23.720246+00:00    2778\n",
-       "2022-11-27 10:01:27.473085+00:00    2697\n",
-       "2022-11-27 22:01:28.816066+00:00    2777\n",
-       "2022-11-28 10:01:30.097580+00:00    2687\n",
-       "Name: loja, Length: 129, dtype: int64"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.groupby(['dt_carga'])['loja'].count()\n",
-    "\n",
-    "# df['data'].value_counts().sort_index().reset_index()\n",
-    "# df['data'] = df.dt_carga.dt.date"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -275,22 +240,305 @@
        "            Pichau    2\n",
        "2022-10-01  Kabum     2\n",
        "                     ..\n",
-       "2022-11-26  Pichau    2\n",
-       "2022-11-27  Kabum     2\n",
+       "2022-11-29  Pichau    2\n",
+       "2022-11-30  Kabum     2\n",
        "            Pichau    2\n",
-       "2022-11-28  Kabum     1\n",
-       "            Pichau    1\n",
-       "Name: dt_carga, Length: 122, dtype: int64"
+       "2022-12-01  Kabum     2\n",
+       "            Pichau    2\n",
+       "Name: dt_carga, Length: 128, dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_datas_loja = df.groupby(['data', 'loja'])['dt_carga'].nunique()\n",
-    "df_datas_loja"
+    "df.groupby(['dt_carga'])['loja'].count()\n",
+    "df.groupby(['data', 'loja'])['dt_carga'].nunique()\n",
+    "# df['data'].value_counts().sort_index().reset_index()\n",
+    "# df['data'] = df.dt_carga.dt.date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ds_marca</th>\n",
+       "      <th>ds_nome_produto</th>\n",
+       "      <th>vl_preco_atual</th>\n",
+       "      <th>vl_preco_com_desconto</th>\n",
+       "      <th>vl_porcentagem_do_desconto</th>\n",
+       "      <th>qt_quantidade_estoque</th>\n",
+       "      <th>oferta</th>\n",
+       "      <th>ds_disponibilidade</th>\n",
+       "      <th>loja</th>\n",
+       "      <th>dt_carga</th>\n",
+       "      <th>data</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2663</th>\n",
+       "      <td>Nvidia</td>\n",
+       "      <td>Nvlink 3 Slot Rtx Geforce</td>\n",
+       "      <td>1322.00</td>\n",
+       "      <td>1322.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Kabum</td>\n",
+       "      <td>2022-09-29 22:01:30.406181+00:00</td>\n",
+       "      <td>2022-09-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2664</th>\n",
+       "      <td>Gigabyte</td>\n",
+       "      <td>Gigabyte GTX 1050 Ti, 4GB, DDR5</td>\n",
+       "      <td>1999.00</td>\n",
+       "      <td>1999.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Kabum</td>\n",
+       "      <td>2022-09-29 22:01:30.406181+00:00</td>\n",
+       "      <td>2022-09-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2665</th>\n",
+       "      <td>Nvidia</td>\n",
+       "      <td>Vga Pci-e 1gb Galax Geforce Gt710 - 1gb</td>\n",
+       "      <td>339.00</td>\n",
+       "      <td>339.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Kabum</td>\n",
+       "      <td>2022-09-29 22:01:30.406181+00:00</td>\n",
+       "      <td>2022-09-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2666</th>\n",
+       "      <td>Colorful</td>\n",
+       "      <td>Placa de Video Colorful GT 710, 1GB DDR3</td>\n",
+       "      <td>349.00</td>\n",
+       "      <td>349.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>93</td>\n",
+       "      <td>None</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Kabum</td>\n",
+       "      <td>2022-09-29 22:01:30.406181+00:00</td>\n",
+       "      <td>2022-09-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2667</th>\n",
+       "      <td>Asus</td>\n",
+       "      <td>Placa de Vídeo Asus GeForce RTX 3080 10GB</td>\n",
+       "      <td>19999.00</td>\n",
+       "      <td>19999.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Kabum</td>\n",
+       "      <td>2022-09-29 22:01:30.406181+00:00</td>\n",
+       "      <td>2022-09-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>359526</th>\n",
+       "      <td>Power Color</td>\n",
+       "      <td>Placa de Video Power Color Radeon AXRX 6400, 4...</td>\n",
+       "      <td>1176.46</td>\n",
+       "      <td>999.99</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>97</td>\n",
+       "      <td>[{'ds_oferta_nome': 'Natal Ninja', 'vl_oferta_...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Kabum</td>\n",
+       "      <td>2022-12-01 22:01:39.701577+00:00</td>\n",
+       "      <td>2022-12-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>359527</th>\n",
+       "      <td>Power Color</td>\n",
+       "      <td>Placa de Vídeo RX 6500 XT ITX Power Color AMD ...</td>\n",
+       "      <td>1529.40</td>\n",
+       "      <td>1299.99</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'ds_oferta_nome': 'Prime', 'vl_oferta_preco_...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Kabum</td>\n",
+       "      <td>2022-12-01 22:01:39.701577+00:00</td>\n",
+       "      <td>2022-12-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>359528</th>\n",
+       "      <td>Power Color</td>\n",
+       "      <td>Placa de Vídeo RX 6800 XT PowerColor AMD Radeo...</td>\n",
+       "      <td>5882.34</td>\n",
+       "      <td>4999.99</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'ds_oferta_nome': 'Prime', 'vl_oferta_preco_...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Kabum</td>\n",
+       "      <td>2022-12-01 22:01:39.701577+00:00</td>\n",
+       "      <td>2022-12-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>359529</th>\n",
+       "      <td>Power Color</td>\n",
+       "      <td>Placa de Vídeo AXRX 6600 3DH Power Color Fight...</td>\n",
+       "      <td>3999.99</td>\n",
+       "      <td>3399.99</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'ds_oferta_nome': 'Prime', 'vl_oferta_preco_...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Kabum</td>\n",
+       "      <td>2022-12-01 22:01:39.701577+00:00</td>\n",
+       "      <td>2022-12-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>359530</th>\n",
+       "      <td>Power Color</td>\n",
+       "      <td>Placa de Vídeo RX 6600 XT Power Color Fighter ...</td>\n",
+       "      <td>3058.81</td>\n",
+       "      <td>2599.99</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'ds_oferta_nome': 'Prime', 'vl_oferta_preco_...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Kabum</td>\n",
+       "      <td>2022-12-01 22:01:39.701577+00:00</td>\n",
+       "      <td>2022-12-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>168190 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           ds_marca                                    ds_nome_produto  \\\n",
+       "2663         Nvidia                          Nvlink 3 Slot Rtx Geforce   \n",
+       "2664       Gigabyte                    Gigabyte GTX 1050 Ti, 4GB, DDR5   \n",
+       "2665         Nvidia            Vga Pci-e 1gb Galax Geforce Gt710 - 1gb   \n",
+       "2666       Colorful           Placa de Video Colorful GT 710, 1GB DDR3   \n",
+       "2667           Asus          Placa de Vídeo Asus GeForce RTX 3080 10GB   \n",
+       "...             ...                                                ...   \n",
+       "359526  Power Color  Placa de Video Power Color Radeon AXRX 6400, 4...   \n",
+       "359527  Power Color  Placa de Vídeo RX 6500 XT ITX Power Color AMD ...   \n",
+       "359528  Power Color  Placa de Vídeo RX 6800 XT PowerColor AMD Radeo...   \n",
+       "359529  Power Color  Placa de Vídeo AXRX 6600 3DH Power Color Fight...   \n",
+       "359530  Power Color  Placa de Vídeo RX 6600 XT Power Color Fighter ...   \n",
+       "\n",
+       "        vl_preco_atual  vl_preco_com_desconto  vl_porcentagem_do_desconto  \\\n",
+       "2663           1322.00                1322.00                         0.0   \n",
+       "2664           1999.00                1999.00                         0.0   \n",
+       "2665            339.00                 339.00                         0.0   \n",
+       "2666            349.00                 349.00                         0.0   \n",
+       "2667          19999.00               19999.00                         0.0   \n",
+       "...                ...                    ...                         ...   \n",
+       "359526         1176.46                 999.99                        15.0   \n",
+       "359527         1529.40                1299.99                        15.0   \n",
+       "359528         5882.34                4999.99                        15.0   \n",
+       "359529         3999.99                3399.99                        15.0   \n",
+       "359530         3058.81                2599.99                        15.0   \n",
+       "\n",
+       "        qt_quantidade_estoque  \\\n",
+       "2663                        0   \n",
+       "2664                        0   \n",
+       "2665                        0   \n",
+       "2666                       93   \n",
+       "2667                        0   \n",
+       "...                       ...   \n",
+       "359526                     97   \n",
+       "359527                      0   \n",
+       "359528                      0   \n",
+       "359529                      0   \n",
+       "359530                      0   \n",
+       "\n",
+       "                                                   oferta ds_disponibilidade  \\\n",
+       "2663                                                 None              False   \n",
+       "2664                                                 None              False   \n",
+       "2665                                                 None              False   \n",
+       "2666                                                 None               True   \n",
+       "2667                                                 None              False   \n",
+       "...                                                   ...                ...   \n",
+       "359526  [{'ds_oferta_nome': 'Natal Ninja', 'vl_oferta_...               True   \n",
+       "359527  [{'ds_oferta_nome': 'Prime', 'vl_oferta_preco_...              False   \n",
+       "359528  [{'ds_oferta_nome': 'Prime', 'vl_oferta_preco_...              False   \n",
+       "359529  [{'ds_oferta_nome': 'Prime', 'vl_oferta_preco_...              False   \n",
+       "359530  [{'ds_oferta_nome': 'Prime', 'vl_oferta_preco_...              False   \n",
+       "\n",
+       "         loja                         dt_carga        data  \n",
+       "2663    Kabum 2022-09-29 22:01:30.406181+00:00  2022-09-29  \n",
+       "2664    Kabum 2022-09-29 22:01:30.406181+00:00  2022-09-29  \n",
+       "2665    Kabum 2022-09-29 22:01:30.406181+00:00  2022-09-29  \n",
+       "2666    Kabum 2022-09-29 22:01:30.406181+00:00  2022-09-29  \n",
+       "2667    Kabum 2022-09-29 22:01:30.406181+00:00  2022-09-29  \n",
+       "...       ...                              ...         ...  \n",
+       "359526  Kabum 2022-12-01 22:01:39.701577+00:00  2022-12-01  \n",
+       "359527  Kabum 2022-12-01 22:01:39.701577+00:00  2022-12-01  \n",
+       "359528  Kabum 2022-12-01 22:01:39.701577+00:00  2022-12-01  \n",
+       "359529  Kabum 2022-12-01 22:01:39.701577+00:00  2022-12-01  \n",
+       "359530  Kabum 2022-12-01 22:01:39.701577+00:00  2022-12-01  \n",
+       "\n",
+       "[168190 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df_datas_loja = df.groupby(['data', 'loja'])['dt_carga'].nunique()\n",
+    "# df_datas_loja\n",
+    "maxDf = df.groupby(['data'])['dt_carga'].max()\n",
+    "maxDates = maxDf.tolist()\n",
+    "df.loc[df['dt_carga'].isin(maxDates)]"
    ]
   },
   {
